grammar.js
    module: ($) =>
      seq(
        optional($.package_stmt),
        repeat(choice($.import_stmt, $.using_stmt)),
        repeat(choice($._type_decl, $._statement)),
      ),

    // Expressions ------------------------------------------------------------

    _expression: ($) =>
      choice(
        // $.conditional,
        $.macro_expr,
        $.assignment_expr,
        $.binop,
        $.unop,
        $.ternop,
        $.function_expr,
        $.return_expr,
        $.arrow_function_expr,
        $.new_expr,
        $.member_expr,
        $.array_access,
        $.call_expr,
        $.array,
        $.map,
        $.for_expr,
        $.if_expr,
        $.switch_expr,
        $.object,
        $._parenthesized_expr,
        $.cast_expr,
        $.range,
        $.identifier,
        $.int,
        $.float,
        $.string,
        $.regexp,
        $.true,
        $.false,
        $.null,
        // $.cc_expr, // only expression-level CC here
        $.untyped,
        $.block,
      ),

    _parenthesized_expr: ($) => seq("(", $._expression, ")"),

    assignment_expr: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", $._expression),
          //field("operator", $.assignment_operator),
          $._assignment_operator,
          field("right", $._expression),
        ),
      ),
    _assignment_operator: (_) =>
      choice("=", "+=", "-=", "*=", "/=", "%=", "&=", "|=", "^=", "<<=", ">>="),

    member_expr: ($) =>
      prec.left(
        PREC.CALL,
        seq(field("object", $._expression), ".", field("field", $.identifier)),
      ),

    call_expr: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.member_expr,
              $.new_expr,
              $._parenthesized_expr,
            ),
          ),
          field("arguments", $.arg_list),
        ),
      ),

    new_expr: ($) =>
      prec(
        PREC.CALL + 1,
        seq("new", field("type", $.type_path), field("args", $.arg_list)),
      ),

    return_expr: ($) => seq("return", optional($._expression)),

    arrow_function_expr: ($) =>
      prec.right(
        PREC.CALL + 1,
        seq(
          field(
            "params",
            choice(
              seq(
                "(",
                optional($.param_list),
                ")",
                optional(seq(":", $.type_path)),
              ),
              choice($.identifier, "_"),
            ),
          ),
          "->",
          field("body", $._expression),
        ),
      ),

    arg_list: ($) =>
      seq(
        "(",
        optional(seq($._expression, repeat(seq(",", $._expression)))),
        ")",
      ),

    array_access: ($) =>
      prec.left(PREC.CALL, seq($._expression, "[", $._expression, "]")),

    binop: ($) =>
      choice(
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $._expression),
            field("operator", "||"),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $._expression),
            field("operator", "&&"),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.BITWISE_OR,
          seq(
            field("left", $._expression),
            field("operator", "|"),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.BITWISE_XOR,
          seq(
            field("left", $._expression),
            field("operator", "^"),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.BITWISE_AND,
          seq(
            field("left", $._expression),
            field("operator", "&"),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.EQUALITY,
          seq(
            field("left", $._expression),
            field("operator", choice("==", "!=")),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.RELATIONAL,
          seq(
            field("left", $._expression),
            field("operator", choice("<", ">", "<=", ">=")),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.SHIFT,
          seq(
            field("left", $._expression),
            field("operator", choice("<<", ">>", ">>>")),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.ADD,
          seq(
            field("left", $._expression),
            field("operator", choice("+", "-")),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.MULT,
          seq(
            field("left", $._expression),
            field("operator", choice("*", "/", "%")),
            field("right", $._expression),
          ),
        ),
        prec.left(
          PREC.NULL_COALESCE,
          seq(
            field("left", $._expression),
            field("operator", "??"),
            field("right", $._expression),
          ),
        ),
      ),

    literal: ($) =>
      choice(
        $.int,
        $.string,
        $.true,
        $.false,
        $.null,
        $.regexp,
        $.array,
        $.map,
        $.object,
        $.range,
      ),

    int: (_) =>
      token(
        choice(
          /0x[a-fA-F\d][a-fA-F\d_]*/,
          /0b[01][01_]*/,
          /0o[0-7][0-7_]*/,
          /\d[\d_]*/,
        ),
      ),

    float: (_) =>
      token(
        choice(
          /\d[\d_]*\.\d[\d_]*([ee][+-]?\d[\d_]*)?/,
          /\d[\d_]+[ee][+-]?\d[\d_]*/,
        ),
      ),

    string: ($) =>
      choice(
        seq(
          "'",
          repeat(
            choice(
              alias(token.immediate(prec(1, /[^'\\$]+/)), $.fragment),
              $.escape_sequence,
              $.interpolation,
            ),
          ),
          "'",
        ),
        seq(
          '"',
          repeat(
            choice(
              alias(token.immediate(prec(1, /[^"\\$]+/)), $.fragment),
              $.escape_sequence,
            ),
          ),
          '"',
        ),
      ),
    escape_sequence: () => token.immediate(seq("\\", /./)),
    interpolation: ($) =>
      choice(seq("${", $._expression, "}"), seq("$", $.identifier)),

    regexp: (_) =>
      token(seq("~/", repeat(choice(/[^/\\\n]/, /\\./)), "/", /[gimsu]*/)),

    true: (_) => token("true"),
    false: (_) => token("false"),
    null: (_) => token("null"),

    array: ($) =>
      prec.right(
        choice(
          seq("[", optional(commaSep1($._expression)), optional(","), "]"),
          prec(1, seq(
            "[",
            "for",
            "(",
            field("iterator", $.identifier),
            "in",
            field("iterable", $._expression),
            ")",
            optional(seq("if", field("condition", $._parenthesized_expr))),
            field("result", $._expression),
            "]",
          )),
          seq(
            "[",
            "while",
            "(",
            field("condition", $._expression),
            ")",
            field("result", $._expression),
            "]",
          ),
        ),
      ),

    map: ($) =>
      prec.right(
        choice(
          seq("[", commaSep1(seq($._expression, "=>", $._expression)), optional(","), "]"),
          prec(1, seq(
            "[",
            "for",
            "(",
            field("iterator", $.identifier),
            "in",
            field("iterable", $._expression),
            ")",
            optional(seq("if", field("condition", $._parenthesized_expr))),
            field("key", $._expression),
            "=>",
            field("value", $._expression),
            "]",
          )),
          seq(
            "[",
            "while",
            "(",
            field("condition", $._expression),
            ")",
            field("key", $._expression),
            "=>",
            field("value", $._expression),
            "]",
          ),
        ),
      ),

    object: ($) =>
      seq("{", optional(seq(commaSep1($.object_field), optional(","))), "}"),
    object_field: ($) =>
      seq(
        field("key", choice($.identifier, $.string)),
        ":",
        field("value", $._expression),
      ),

    _statement: ($) =>
      choice(
        $.conditional,
        $.function_decl,
        $.break_stmt,
        $.continue_stmt,
        $.throw_stmt,
        $.type_trace_stmt,
        prec(1, $.if_expr),
        prec(1, $.switch_expr),
        prec(1, $.for_expr),
        $.while_stmt,
        $.do_stmt,
        $.try_stmt,
        $.var_decl,
        $._expr_stmt,
        $.function_decl,
      ),

    throw_stmt: ($) => seq("throw", $._expression, $._semicolon),
    switch_expr: ($) =>
      seq(
        "switch",
        $._expression,
        "{",
        repeat($.switch_case),
        optional($.switch_default),
        "}",
      ),
    switch_case: ($) =>
      seq(
        "case",
        field("pattern", optional(commaSep1($.pattern))),
        optional(seq("if", field("guard", $._parenthesized_expr))),
        ":",
        repeat($._statement),
      ),
    object_pattern: ($) =>
      seq(
        "{",
        commaSep1(
          seq(
            field("key", $.identifier),
            ":",
            field(
              "value",
              choice(
                $.identifier,
                $.int,
                $.string,
                $.true,
                $.false,
                $.null,
                $.call_expr,
                $.object_pattern, // nested patterns
              ),
            ),
          ),
        ),
        optional(","),
        "}",
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    pattern: ($) =>
      choice(
        "_",
        $.identifier,
        $.literal,
        $.call_pattern,
        $.object_pattern,
        $.array_pattern
      ),

    _pattern_arg: ($) => choice($.pattern, seq($.identifier, "=", $.pattern)),

    call_pattern: ($) =>
      seq($.identifier, "(", optional(commaSep($._pattern_arg)), ")"),

    array_pattern: ($) =>
      seq(
        "[",
        optional(
          seq(
            commaSep($.pattern),
            optional(","),
          ),
        ),
        "]"
      ),

    _type_decl: ($) =>
      choice(
        $.abstract_decl,
        $.class_decl,
        $.interface_decl,
        $.enum_decl,
        $.typedef_decl,
      ),

    abstract_decl: ($) =>
      seq(
        optional($._prefix),
        optional($.abstract_enum_modifier),
        "abstract",
        field("name", $.identifier),
        optional($.type_decl_params),
        optional(seq("(", field("underlying_type", $.type_path), ")")),
        optional(seq("from", field("from_type", $.type_path))),
        optional(seq("to", field("to_type", $.type_path))),
        optional($.block),
      ),
    abstract_enum_modifier: (_) => "enum",

    class_decl: ($) =>
      seq(
        optional($._prefix),
        "class",
        field("name", $.identifier),
        optional($.type_decl_params),
        optional($.class_extends),
        repeat($.class_implements),
        $.class_body,
      ),
    class_body: ($) => seq("{", repeat($.class_member), "}"),
    var_decl: ($) =>
      seq(
        optional($._prefix),
        choice("var", "final"),
        field("name", $.identifier),
        optional($.property_accessor), //TODO: move to class_var_decl, interface_var_decl
        optional(seq(":", field("type", $.type_path))),
        optional(seq("=", field("value", $._expression))),
        $._semicolon,
      ),
    property_accessor: ($) =>
      seq(
        "(",
        field("get", $.property_access_identifier),
        ",",
        field("set", $.property_access_identifier),
        ")",
      ),
    property_access_identifier: ($) =>
      choice($.identifier, "default", "null", "get", "set", "dynamic", "never"),

    enum_decl: ($) =>
      seq(
        optional($._prefix),
        "enum",
        field("name", $.identifier),
        optional($.type_decl_params),
        optional($.enum_body),
      ),
    enum_body: ($) =>
      seq("{", repeat(seq($.enum_item, optional($._semicolon))), "}"),
    enum_item: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", $.type_path)),
        optional(seq("(", optional(commaSep1($.enum_param)), ")")),
      ),
    enum_param: ($) =>
      seq(
        optional("?"),
        field("name", $.identifier),
        optional(seq(":", $.type_path)),
      ),

    typedef_decl: ($) =>
      seq(
        optional($._prefix),
        "typedef",
        field("name", $.identifier),
        optional($.type_decl_params),
        "=",
        choice($.identifier, $.typedef_block),
        optional($._semicolon),
      ),
    typedef_block: ($) =>
      seq(
        "{",
        repeat(
          seq(
            choice(
              seq(">", field("extends", $.type_path)),
              $.var_decl,
              seq($.identifier, ":", $.type_path),
            ),
            optional(","),
            optional($._semicolon),
          ),
        ),
        "}",
      ),

    interface_decl: ($) =>
      seq(
        optional($._prefix),
        "interface",
        field("name", $.identifier),
        optional($.type_decl_params),
        optional($.block),
      ),

    function_decl: ($) =>
      seq(
        optional($._prefix),
        "function",
        field("name", $.identifier),
        optional($.type_decl_params),
        "(",
        optional($.param_list),
        ")",
        optional(seq(":", $.type_path)),
        optional($.block),
      ),

    param_list: ($) => seq($.param, repeat(seq(",", $.param))),
    param: ($) =>
      seq(
        optional($.optional),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type_path))),
        optional(seq("=", field("value", $._expression))),
      ),

    // Conditional compilation ------------------------------------------------

    type_name: ($) => $._pascal_case_identifier,

    type_path: ($) =>
      seq(
        optional(seq(field("package", $.package_path), ".")),
        $.type_name,
        optional($.type_params),
        repeat(seq(".", field("sub", $.identifier))),
      ),

    // Used in instantiations and invocations
    type_params: ($) => seq("<", commaSep1($.type_path), ">"),

    // Used in type declarations
    type_decl_params: ($) => seq("<", commaSep1($.type_decl_param), ">"),
    type_decl_param: ($) =>
      seq(
        $.type_name,
        choice(
          optional(seq(":", field("constraint", sep1(" & ", $.type_path)))),
          optional(seq("=", field("default", $.type_path))),
        ),
      ),

    package_path: ($) => dotSep1($.pack),
    pack: (_) => /[a-z_]+[a-zA-Z0-9]*/,

    // Modifiers / Metadata ---------------------------------------------------

    _prefix: ($) => repeat1(choice($._modifier, $.metadata)),

    // Tokens -----------------------------------------------------------------

    identifier: (_) => /[a-zA-Z_]+[a-zA-Z0-9]*/,

    optional: (_) => "?",
    _pascal_case_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,
    _semicolon: (_) => ";",
