test/corpus/property.txt
========
property
========

var ro(default, null):Int;
var wo(null, default):Int;
var x(get, set):Int;
var y(get, never):Int;
final z:Int;

---

(module
  (var_decl
    name: (identifier)
    (property_accessor
      get: (property_access_identifier)
      set: (property_access_identifier))
    type: (type_path
      (type_name)))
  (var_decl
    name: (identifier)
    (property_accessor
      get: (property_access_identifier)
      set: (property_access_identifier))
    type: (type_path
      (type_name)))
  (var_decl
    name: (identifier)
    (property_accessor
      get: (property_access_identifier)
      set: (property_access_identifier))
    type: (type_path
      (type_name)))
  (var_decl
    name: (identifier)
    (property_accessor
      get: (property_access_identifier)
      set: (property_access_identifier))
    type: (type_path
      (type_name)))
  (var_decl
    name: (identifier)
    type: (type_path
      (type_name))))

========
field with literal value assigned
========

static final foo:Int = 1;

---

(module
  (var_decl
    (static)
    name: (identifier)
    type: (type_path
      (type_name))
    value: (int)))

========
field with block expression value assigned
========

static final foo:Int = {1;};

---

(module
  (var_decl
    (static)
    name: (identifier)
    type: (type_path
      (type_name))
    value: (block (int))))

========
field with nested generic type
========

private var children:Array<Node<T>>;

---

(module
  (var_decl
    (private)
    name: (identifier)
    type: (type_path
      (type_name)
      (type_params
        (type_path
          (type_name)
          (type_params
            (type_path
              (type_name))))))))
